--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+
+<html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Click the Chaos Cake 🎂</title>
+
   <style>
     body {
       background-color: #fffbe6;
@@ -40,20 +45,22 @@
       width: 80%;
     }
   </style>
+
+  
 </head>
 <body>
-
-  <h1>🎉 Try Catching the Cake! 🎂</h1>
+  <h1>Click the pizza 🎂</h1>
   <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png" id="cake" alt="Cake">
   <div id="message"></div>
 
   <script>
     const messages = [
-      "Happy birthday you chaotic legend 🎈",
-      "You're sweeter than cake (and that’s saying a lot)",
-      "May this year be full of good memes and bad decisions 🧁",
-      "You deserve all the frosting and none of the drama",
-      "Final message: thanks for being born, you wonderful human 🎉"
+      "HAPPY BIRTHDAY MANYA, here's 7 pickup lines you can use in Toulouse",
+      "I’d violate budget constraints just to spend time with you.",
+      "Even Adam Smith couldn’t explain this invisible attraction."
+      "Forget the market — you’re my only preference."
+      "Your presence shifts all my curves to the right."
+      "I want you like Mankiw wants lower corporate taxes — shamelessly and with weak justification."
     ];
 
     let index = 0;
@@ -75,13 +82,12 @@
         index++;
         randomPosition();
       } else {
-        msgDiv.textContent = "No more messages, just sugar crashes now. 🎂💥";
+        msgDiv.textContent = "okay happy birthday you know how much I love you sorry I missed it, there is no excuse I love you and I am in love with you and I can't wait to live with you, moving countries would be unimaginable without you by my side and I am always always grateful that you are there with me through this. Thank you for being the my support system. Happy 21sttt";
       }
     });
 
     // Start with random position
     randomPosition();
   </script>
-
 </body>
 </html>
