--- a/index-jsfiddle-4q08hzk1-0.html
+++ b/index-jsfiddle-4q08hzk1-0.html
@@ -44,11 +44,12 @@
 
   <script>
     const messages = [
-      "Happy birthday you chaotic legend 🎈",
-      "You're sweeter than cake (and that’s saying a lot)",
-      "May this year be full of good memes and bad decisions 🧁",
-      "You deserve all the frosting and none of the drama",
-      "Final message: thanks for being born, you wonderful human 🎉"
+      "HAPPY BIRTHDAY MANYA, here's 7 pickup lines you can use in Toulouse",
+      "I’d violate budget constraints just to spend time with you.",
+      "Even Adam Smith couldn’t explain this invisible attraction."
+      "Forget the market — you’re my only preference."
+      "Your presence shifts all my curves to the right."
+      "I want you like Mankiw wants lower corporate taxes — shamelessly and with weak justification."
     ];
 
     let index = 0;
