--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       "I’d violate budget constraints just to spend time with you.",
       "Forget the market — you’re my only preference."
       "Your presence shifts all my curves to the right."
-      "I want you like Mankiw wants lower corporate taxes — shamelessly and with weak justification."
+      "I want you like Mankiw wants lower corporate taxes; shamelessly and with weak justification."
     ];
 
     let index = 0;
