--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
   <script>
     const messages = [
-      "HAPPY BIRTHDAY MANYA, here's 7 pickup lines you can use in Toulouse",
+      "HAPPY BIRTHDAY MANYA, here's some pickup lines you can use in Toulouse",
       "I’d violate budget constraints just to spend time with you.",
-      "Forget the market — you’re my only preference."
+      "Forget the market, you’re my only preference."
       "Your presence shifts all my curves to the right."
       "I want you like Mankiw wants lower corporate taxes; shamelessly and with weak justification."
     ];
@@ -81,7 +81,7 @@
         index++;
         randomPosition();
       } else {
-        msgDiv.textContent = "okay happy birthday you know how much I love you sorry I missed it, there is no excuse I love you and I am in love with you and I can't wait to live with you, moving countries would be unimaginable without you by my side and I am always always grateful that you are there with me through this. Thank you for being the my support system. Happy 21sttt";
+        msgDiv.textContent = "okay happy birthday Happy 21sttt";
       }
     });
 
